#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-11
2011-04-14 Andy Salnikov
- new module EBeamHist to test histogramming

Tag: V00-00-10
2011-04-05 Andy Salnikov
- insert missing newline in DumpEpics output

Tag: V00-00-09
2011-04-01 Andy Salnikov
- make things more uniform
- use module name for logger name, remove explicit logger name
- added data/DumpAll.cfg config file which uses all modules from this
  package

Tag: V00-00-08
2011-04-01 Andy Salnikov
- added DumpEncoder, DumpEvr, DumpFccd, DumpIpimb, DumpLusi, DumpOpal1k,
  DumpPnccd, DumpPrinceton, DumpPulnix modules

Tag: V00-00-07
2011-03-31 Andy Salnikov
- added DumpCamera, DumpControl, DumpCsPad modules

Tag: V00-00-06
2011-03-30 Andy Salnikov
- adding DumpAcqTdc module
- removed data/Module1.cfg

Tag: V00-00-05
2011-03-28 Andy Salnikov
- added DumpEpics module

Tag: V00-00-04
2011-03-23 Andy Salnikov
- modified examples to work with Source class instead of Pds::Src

Tag: V00-00-03
2011-03-21 Andy Salnikov
- removed Module1 module
- added DumpAcqiris and DumpBld examples

Tag: V00-00-02
2011-01-26 Andy Salnikov
- fixed event() arguments

Tag: V00-00-01
2010-09-28 Andy Salnikov
- first commit, just one non-functional example module which I use
  for development